# MLOps

./: .dockerignore  .gitignore  Dockerfile.airflow  LICENSE  README.md  dag_full_execution_path.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
common/: column_transforms.py  yaml.py
dags/: reddit_backfill_once.py  reddit_data_pipeline_dag.py  reddit_hourly_incremental.py
dags/docker/: Dockerfile  requirements.txt
data_pipeline/: config.yaml  manual_backfill.py  reddit_features.md  register_dataset.py  requirements.txt  script_configs.py  test.ipynb
data_pipeline/configs/: manual_backfill.yaml  register_dataset.yaml
data_pipeline/dags/: reddit_data_pipeline_dag.py
data_pipeline/dags/docker/: Dockerfile
data_pipeline/src/: __init__.py  data_loader.py  data_transformer.py  utils.py  write_dispatcher.py
eda/: data_research.ipynb  eda.ipynb  load_reddit.py
experiments/: __init__.py  evaluation.py  reporting.py  train_experiment.py  tune_experiment.py
experiments/configs/train/: catboost.yaml  catboost_log_target.yaml  catboost_time.yaml  catboost_title_features.yaml  ridge.yaml
experiments/configs/tune/: catboost_optuna.yaml
experiments/data/: dataset.py  split.py
experiments/features/: build.py
experiments/load_testing/: kafka_producer.py  load_date=2025-11-25.parquet  locustfile.py
experiments/models/: catboost.py  ridge.py
experiments/tracking/: mlflow_tracking.py
inference/: README.md
inference/model_repository/regression/: config.pbtxt
inference/model_repository/regression/1/: model.onnx
inference/src/: app.py  config.yml  kafka_consumer.py  predictor.py
inference/utils/: online_transform.py  onnx_converter.py  predict_schema.py  yaml.py
mlflow/docker/: Dockerfile
monitoring/grafana/dashboards/: inference-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
src/reddit_pipeline/: reddit_ingestion.py
