[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-lab"
version = "0.1.0"
description = "Infrastructure for Reddit data collection and ML experimentation."
requires-python = ">=3.10"
dependencies = [
  "catboost>=1.2",
  "fastapi>=0.115",
  "matplotlib>=3.8",
  "mlflow==3.10.1",
  "onnx>=1.16",
  "optuna>=4.0",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "s3fs>=2024.0.0",
  "python-dotenv>=1.0.0",
  "prometheus-fastapi-instrumentator>=7.0",
  "PyYAML>=6.0",
  "requests>=2.28",
  "sentence-transformers>=2.2",
  "confluent-kafka>=2.6",
  "locust>=2.30",
  "tritonclient[grpc]>=2.50",
  "uvicorn>=0.30",
]

[project.scripts]
manual-backfill = "data_pipeline.manual_backfill:main"
register-processed-dataset = "data_pipeline.register_dataset:main"
train-experiment = "experiments.train_experiment:main"
tune-experiment = "experiments.tune_experiment:main"
inference-kafka-consumer = "inference.src.kafka_consumer:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["data_pipeline*", "experiments*", "inference*"]

[tool.uv]
package = true
